table alignment fix

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/order.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/order.css
@@ -163,7 +163,7 @@
 .accountContentPane .headline{padding-left:25px;}
 .orderList .orderListTable .item td{border-bottom:0px;}
 .accountContentPane{background:none;}
-.fixthis_budget_cls{width:250px !important;}
+.fixthis_budget_cls{width:326px !important;}
 .fixthis_budgettwo_cls{width:280px !important;}
 .orderList .orderListTable thead th{font-size:0.7em !important;}
 
